--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <img src="F.png" alt="logo">
             </div>
             <div class="head-right">
-                <p><a href="#">Home</a></p>
-                <p><a href="a">Alternate links</https://finntheboss54.github.io/Alternate.links/></p>
+                <p><a href="https://finntheboss54.github.io/Finnywhinnysite/">Home</a></p>
+                <p><a href="https://finntheboss54.github.io/Alternate.links/">Alternate links</a></p>
                 <p><a href="ai">AI</a></p>
                 <p><a href="info">Pr_xy</a></p>
             </div>
