--- a/games/AdventureCapatalist.html
+++ b/games/AdventureCapatalist.html
@@ -1,5 +1,12 @@
 <!doctype html>
 <html lang="en-us">
+ <div class="navbar">
+        <header>
+            <div class="head-left">
+                <img src="F.png" alt="logo">
+            </div>
+            <div class="head-right">
+                <p><a href="classlink.com">PANIC SECTION</a/></p>
  
 <head>
     <base href="https://rawcdn.githack.com/selenite-cc/selenite-old/9c743188888af0986c8c7b293dbac8f9e421a4ee/adventure-capitalist/">
@@ -119,3 +126,4 @@
 </body>
  
 </html>
+
